tests/baselines/reference/symbolProperty25.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty25.ts(5,7): error TS2420: Class 'C' incorrectly implements interface 'I'.
  Index signature is missing in type 'I'.


==== tests/cases/conformance/es6/Symbols/symbolProperty25.ts (1 errors) ====
    interface I {
        [Symbol.toPrimitive]: () => boolean;
    }
    
    class C implements I {
          ~
!!! error TS2420: Class 'C' incorrectly implements interface 'I'.
!!! error TS2420:   Index signature is missing in type 'I'.
        [Symbol.toStringTag]() {
            return "";
        }
    }